# Blitz2020

./: .dockerignore  .gitignore  README.md
server/: .gitignore  Dockerfile  README.md  application.py  mypy.ini  pyproject.toml  requirements-tests.txt  requirements.txt
server/blitz2020/: __main__.py
server/blitz2020/game/: abstract_player.py  abstract_recorder.py  abstract_viewer.py  action.py  direction.py  flood.py  game.py  game_config.py  game_map.py  game_state.py  player_state.py  player_stats.py  position.py
server/blitz2020/players/: player_with_stats.py  random_player.py
server/blitz2020/recorders/: json_recorder.py  s3_recorder.py
server/blitz2020/servers/: abstract_server.py  local_game_server.py
server/game_presets/: 0-basic_1p_5x5.txt  0-basic_4p_21x21.txt  1-advanced_1p21x21.txt  final-0.txt  final-1.txt  final-2.txt  final-3.txt  final-4.txt  final-5.txt  final-6.txt  practice-2p-0.txt  practice-2p-1.txt  practice-2p-2.txt  practice-2p-3.txt  practice-2p-4.txt  practice-2p-5.txt  practice-2p-6.txt  practice-4p-0.txt  practice-4p-1.txt  practice-4p-2.txt  practice-4p-3.txt  practice-4p-4.txt  practice-4p-5.txt  practice-4p-6.txt  practice-4p-t-0.txt  practice-4p-t-1.txt  practice-4p-t-2.txt  practice-4p-t-3.txt  practice-4p-t-4.txt  practice-4p-t-5.txt  round1-0.txt  round1-1.txt  round1-2.txt  round1-3.txt  round1-4.txt  round2-0.txt  round2-1.txt  round2-2.txt  round2-3.txt  round2-4.txt  (+5 more)
server/tests/: __main__.py
server/tests/game/: map_utils.py  test_action.py  test_direction.py  test_flood.py  test_game.py  test_game_config.py  (+5 more)
(+114 files in other folders)
